feat: added facts endpoint
